--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -2,7 +2,7 @@
 on:
   push:
     paths:
-      - packages.R
+      - extra/packages.R
 
 name: Render library update
 
@@ -24,6 +24,6 @@ jobs:
         run: |
           git config --local user.email "actions@github.com"
           git config --local user.name "GitHub Actions"
-          git add packages-used.png
+          git add extra/packages-used.png
           git commit -m 'Re-build package plot' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
