--- a/.github/workflows/render-readme.yaml
+++ b/.github/workflows/render-readme.yaml
@@ -15,10 +15,11 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-      - name: Install tidyverse to run script
-        run: Rscript -e 'install.packages("tidyverse")'
-        shell: Rscript {0}
-      - name: Render r script file
+      - name: Install Package Dependencies
+        run: |-
+          Rscript -e "install.packages('remotes')"
+          Rscript -e "remotes::install_deps(dependencies = TRUE)"
+      - name: Render r plot file
         run: Rscript -e "source('packages.R')"
       - name: Commit results
         run: |
