--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -1,4 +1,3 @@
-
 on:
   push:
     branches:
@@ -10,16 +9,17 @@ jobs:
   render:
     name: Library update
     runs-on: macOS-latest
-
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - name: Install Package Dependencies
-        run: |-
+        run: |
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Render r plot file
-        run: Rscript -e "source('packages.R')"
+        run: Rscript -e "source('exrta/packages.R')"
       - name: Commit results
         run: |
           git config --local user.email "actions@github.com"
