--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-      - name: Install Package Dependencies
+      - name: Install package dependencies
         run:
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
