--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -16,7 +16,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - name: Install package dependencies
         run:
-          Rscript -e "install.packages(c('remotes', 'tidyverse')"
+          Rscript -e "install.packages(c('remotes', 'tidyverse'))"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Render r plot file
         run: Rscript -e "source('packages-plot.R')"
