--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -14,9 +14,9 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
-      #- name: Install package dependencies
-        #run:
-          #Rscript -e "install.packages('tidyverse')"
+      - name: Install package dependencies
+        run:
+          Rscript -e "install.packages('tidyverse')"
           #Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Render r plot file
         run: Rscript -e "source('packages-plot.R')"
