--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -7,11 +7,11 @@ name: Render library update
 
 jobs:
   build:
-    runs-on: windows-latest
+    runs-on: macOS-latest
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - name: Install package dependencies
         run: |-
