--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -14,11 +14,11 @@ jobs:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - name: Install package dependencies
-        run: |-
+        run:
           Rscript -e "install.packages('remotes')"
           Rscript -e "remotes::install_deps(dependencies = TRUE)"
       - name: Render r plot file
-        run: |-
+        run:
           Rscript -e "source('packages-plot.R')"
       - name: Commit results
         run: |
