--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: r-lib/actions/setup-r@v1
       - name: Install package dependencies
         run:
-          Rscript -e "install.packages('tidyverse')"
+          Rscript -e "install.packages(c('tidyverse', 'showtext'))"
       - name: Render r plot file
         run:
           Rscript -e "source('packages-plot.R')"
