try and edit gh working

--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -1,8 +1,9 @@
 name: Render library update
 on:
   push:
-    branches:
-      - master
+    paths:
+    - '**.R'
+    - '**.Rmd'
 
 jobs:
   build:
