--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -8,6 +8,7 @@ on:
 jobs:
   build:
     runs-on: macOS-latest
+    if: "contains(github.event.head_commit.message, 'initial commit'"
     steps:
       - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
