remove git config

--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -1,13 +1,14 @@
 name: Render library update
 
-on: [push]
+on:
+  push:
 
 jobs:
   build:
     runs-on: macOS-latest
     if: "contains(github.event.head_commit.message, 'initial commit')"
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v1
       - uses: r-lib/actions/setup-r@v1
       - name: Install package dependencies
         run:
@@ -17,8 +18,6 @@ jobs:
           Rscript -e "source('packages-plot.R')"
       - name: Commit results
         run: |
-          git config --local user.email "actions@github.com"
-          git config --local user.name "GitHub Actions"
           git add extra/packages-used.png
           git commit -m 'Re-build package plot' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
