--- a/.github/workflows/render-plot.yaml
+++ b/.github/workflows/render-plot.yaml
@@ -14,7 +14,7 @@ jobs:
           Rscript -e "install.packages(c('tidyverse', 'showtext'))"
       - name: Render r plot file
         run:
-          Rscript -e "source('packages-plot.R')"
+          Rscript -e "source('extra/packages-plot.R')"
       - name: Commit results
         run: |
           git add extra/packages-used.png
